<resources>
    <string name="app_name">TrafficFeed</string>
    <string name="id">id:</string>
    <string name="source">Source:</string>
    <string name="type">Type:</string>
    <string name="transport">Transport:</string>
    <string name="alarm_name">Alarm name:</string>
    <string name="message">Message:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="timestamp">TimeStamp:</string>
    <string name="previous">previous</string>
    <string name="next">next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
